# Brezn

./: .cursorrules  .gitconfig  .gitignore  .gitmessage  .npmrc  CONTRIBUTING.md  CURSOR_AGENT_SAFETY.md  LICENSE  MVP_COMPLETION_SUMMARY.md  README.md  doku.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  test-action-again.txt  test-action-final.txt  test-commit-message.txt  tsconfig.app.json  vite.config.ts  zapstore.yaml
.githooks/: commit-msg  pre-push
.github/: BRANCH_PROTECTION_RULES.md  CI_CD_README.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/scripts/: ai_agent.py
.github/workflows/: ai-agent-development.yml  android-apk.yml  build-apk.yml  ci-pipeline.yml  codeql.yml  comprehensive-testing.yml  dependabot-auto-merge.yml  dependency-security.yml  deploy-pages.yml  deployment.yml  docker-build.yml  email-protection.yml  ios-archive.yml  performance-test.yml  security-scan.yml  zapstore-publish.yml
android/: manifest-checksum.txt  twa-manifest.json
android/app/: build.gradle
brezn/: .fdroid.yml  .gitignore  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  INSTALL.md  MVP_IMPLEMENTATION_SUMMARY.md  MVP_USAGE_GUIDE.md  P2P_IMPLEMENTATION_SUMMARY.md  P2P_INTEGRATION_GUIDE.md  P2P_NETWORK_README.md  P2P_TESTING_GUIDE.md  PHASE1_COMPLETE.md  PHASE2_PROGRESS.md  README.md  ROADMAP_DETAILED.md  brezn.db  brezn_data.json  build.rs  build_mobile.sh  demo.bat  fdroid_submission.sh  index.html  mobile-setup.md  release.sh  run_p2p_test.sh  run_tests.sh  tauri.conf.json  test_build.sh  test_p2p.sh
brezn/docs/: DISCOVERY_SYSTEM.md  P2P_NETWORK.md  POST_SYNC_IMPLEMENTATION.md  QR_CODE_SYSTEM.md  TESTING_STRATEGY.md  TOR_INTEGRATION.md
brezn/examples/: tor_demo.rs
brezn/mobile/: .gitignore  App.tsx  README.md  TESTING.md  app.json  index.html  index.web.js  jest.config.js  package-lock.json  package.json  sign_android.sh  sign_ios.sh  test_android.sh  test_integration.sh  webpack.config.js
brezn/mobile/docs/: MOBILE_INTEGRATION.md
brezn/mobile/fdroid/: metadata.yml
brezn/mobile/include/: brezn_ffi.h
brezn/mobile/scripts/: build_fdroid.sh  build_mobile.sh
brezn/mobile/src/__tests__/: BreznService.test.ts  CreatePostScreen.test.tsx  FeedScreen.test.tsx  PostCard.test.tsx  QRScannerScreen.test.tsx
brezn/mobile/src/components/: PostCard.tsx  QRCodeScanner.tsx
brezn/mobile/src/native/: BreznNativeModule.ts
brezn/mobile/src/screens/: CreatePostScreen.tsx  FeedScreen.tsx  NetworkScreen.tsx  QRScannerScreen.tsx  SettingsScreen.tsx
brezn/mobile/src/services/: BreznService.ts  P2PNetworkService.ts
brezn/mobile/src/services/__mocks__/: BreznService.ts
brezn/mobile/src/tests/: PerformanceTests.ts
brezn/mobile/src/theme/: colors.ts  spacing.ts  typography.ts
brezn/mobile/src/types/: navigation.ts
brezn/mobile/src/utils/: async.ts  time.ts
brezn/mobile/web/: index.html
brezn/src/: brezn.udl  cli.rs  crypto.rs  database.rs  discovery.rs  discovery_network_bridge.rs  error.rs  ffi.rs  lib.rs  main.rs  main_simple.rs  network.rs  network_simple.rs  p2p_e2e_tests.rs  performance.rs  performance_optimizer.rs  qr.rs  sync_metrics.rs  tor.rs  tor_tests.rs  types.rs  ui_extensions.rs
brezn/src/types/: feed_post.rs  mod.rs
brezn/test_results/: test_report.md
brezn/tests/: README.md  advanced_integration_tests.rs  discovery_integration_tests.rs  integration_test.rs  integration_tests.rs  p2p_integration_tests.rs  p2p_network_test.rs  p2p_network_tests.rs  performance_tests.rs  post_sync_tests.rs  qr_code_tests.rs  stress_tests.rs  test_coverage.rs  test_runner.rs
brezn/web/: IMPLEMENTATION_SUMMARY.md  P2P_UI_README.md  brezn-mvp.css  brezn-mvp.js  index.html  p2p-dashboard.html  p2p-realtime-status.css  p2p-realtime-status.js  package.json  qr.html
brezn_mvp/: Cargo.toml
brezn_mvp/src/: api.rs  crypto.rs  database.rs  discovery.rs  main.rs  network.rs  qr.rs  types.rs
brezn_mvp/static/: index.html
dev-dist/: sw.js
docs/: AI_AGENT_DEVELOPMENT.md  API.md  CI_CD_PIPELINE.md  CURSOR_AGENT_AUTOMATION.md  CURSOR_AUTOMATION_SUMMARY.md  DEVELOPER_QUICKSTART.md  INSTALL.md  PHASE1_COMPLETE.md  PHASE2_PROGRESS.md  PROJECT_STATUS_ACTUAL.md  README.md  RELEASE_GUIDE.md  REPOSITORY_SECURITY_SETUP.md  ROADMAP_DETAILED.md  SEQUENTIAL_AI_AGENT_CHAIN.md  architecture.md  discovery.md  mobile-setup.md  tor_integration.md
e2e/: smoke.spec.ts  storage-consent.spec.ts
patches/: @nostr-dev-kit+ndk+3.0.3.patch  tseep+1.3.1.patch
public/: fatal-handler.js  offline.html  schema.jsonld
public/icons/: thx.txt
scripts/: analyze_performance.py  check-dependency-scripts.mjs  check-locale-keys.mjs  cursor_agent_automation.sh  setup_git_protection.ps1  test-nip96-upload.mjs
scripts/examples/: demo.bat
scripts/fdroid/: .fdroid.yml  fdroid_submission.sh
scripts/mobile/: build_mobile.sh
scripts/release/: release.sh
scripts/tests/: run_p2p_test.sh  test_p2p.sh
src/: App.tsx  Root.tsx  index.css  main.tsx
src/components/: AdblockerWarning.tsx  CloseIcon.tsx  ComposeButton.tsx  ComposerSheet.tsx  ConversationsSheet.tsx  DMSheet.tsx  ErrorBoundary.tsx  Feed.tsx  FeedEventArticle.tsx  GeohashMap.tsx  HeartIcon.tsx  NavigationBar.tsx  PostContent.tsx  PostIdentity.tsx  ProfileSheet.tsx  PwaUpdateToast.tsx  QuotedPostCard.tsx  SettingsSheet.tsx  Sheet.tsx  ThreadSheet.tsx  Toast.tsx  ToastContext.tsx
src/hooks/: useAppState.ts  useAuthorNotes.ts  useBreznDocumentLang.ts  useIdentity.ts  useLocalFeed.ts  useModeration.ts  useNavigation.ts  useNostrClient.ts  useOptimisticReactions.ts  useProfiles.ts  useReactions.ts  useReferencedPosts.ts  useReplies.ts  useSearch.ts  useTheme.ts
src/i18n/: i18n.ts  localeStorage.ts
src/lib/: array.ts  breznNostr.ts  buttonStyles.ts  cn.ts  constants.ts  deletedNotes.ts  eventResolver.test.ts  eventResolver.ts  feedBatchMerge.ts  (+44 more)
(+30 files in other folders)
