[package]
name = "brezn"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "brezn-server"
path = "src/main.rs"

[[bin]]
name = "brezn-cli"
path = "src/bin/cli.rs"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Network
actix-web = "4.4"

# Crypto
ring = "0.17"

# P2P and Discovery
get_if_addrs = "0.5"

# QR Code
qrcode = "0.14"
image = "0.24"
base64 = "0.21"

# Optional dependencies for testing
[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"

[features]
default = []