[package]
name = "brezn_mvp"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
tokio = { version = "1.47", features = ["full"] }
actix-web = "4.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# P2P dependencies
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

# Crypto
ring = "0.17"
base64 = "0.21"
hex = "0.4"

# QR Code
qrcode = "0.14"
image = "0.25"

# Discovery
if-addrs = "0.13"

# Logging
env_logger = "0.11"
log = "0.4"